# lepetomane-ringard

./: .gitignore  CH32V003-notes.md  README.md
.github/workflows/: static.yml
kicad/neopeto/: fp-info-cache  neopeto-pipico.kicad_pcb  neopeto-pipico.kicad_prl  neopeto-pipico.kicad_pro  neopeto-pipico.kicad_sch  neopeto.kicad_pcb  neopeto.kicad_prl  neopeto.kicad_pro  neopeto.kicad_sch
kicad/neopeto/bom/: ibom.html
sw/pico/: CMakeLists.txt  README.md  main.cpp  reset.c  tusb_config.h  usb_descriptors.c
wch-ch32v003/pio-arduino-ch32v003/: README.md  platformio.ini
wch-ch32v003/pio-arduino-ch32v003/src/: bitmap.h  cplex.h  leds.cpp  levelmeter.h  polling_adc.cpp  polling_adc.h
